// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField [common] example testing should match snapshot(s) for 01.basic 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="default"
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value=""
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for 03.on-submit 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value="Enter some text in and hit enter"
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for 04.debounced 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value="foo"
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for 05.multiline 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-single-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="default"
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value=""
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for 05.multiline 2`] = `
<textarea
  className="lucid-TextField lucid-TextField-is-multi-line"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="isMultiLine"
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  value=""
/>
`;

exports[`TextField [common] example testing should match snapshot(s) for 06.disabled 1`] = `
<input
  className="lucid-TextField lucid-TextField-is-disabled lucid-TextField-is-single-line"
  disabled={true}
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="disabled"
  rows={5}
  style={
    Object {
      "marginBottom": "10px",
    }
  }
  type="text"
  value=""
/>
`;
